common/kibana-oauth/logging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging-od
  annotations:                                              
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-Access-Token, Authorization
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"         
spec:
  tls:
  - hosts:
    - abc.example.com
    secretName: nginx-ingress-certs
  rules:
  - host: abc.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: logging-kibana
          servicePort: 5601
---
